# azure-openai-cli

./: Cargo.toml  README.md
src/: config.rs  main.rs  provider.rs
src/provider/: azure.rs
