[package]
name = "azure-openai-cli"
version = "0.1.0"
edition = "2021"
description = "A modular, extensible CLI tool for interacting with Azure OpenAI and other LLM providers. Supports streaming output, provider plugins, and easy configuration."
license = "MIT OR Apache-2.0"
authors = ["Dom"]
repository = "https://github.com/dominic-codespoti/azure-openai-cli"
homepage = "https://github.com/dominic-codespoti/azure-openai-cli"
documentation = "https://docs.rs/azure-openai-cli"
keywords = ["azure", "openai", "cli", "llm", "ai"]
categories = ["command-line-utilities", "api-bindings", "ai"]
readme = "README.md"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
async-trait = "0.1"
toml = "0.8"
dirs = "5.0"
clap = { version = "4.5", features = ["derive"] }
futures-util = "0.3"